; ModuleID = '/home/carl/AnghaBench/netdata/collectors/tc.plugin/extr_plugin_tc.c_tc_device_index_find.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/tc.plugin/extr_plugin_tc.c_tc_device_index_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tc_device = type { i8*, i64 }

@tc_device_root_index = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.tc_device* (i8*, i64)* @tc_device_index_find to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.tc_device* @tc_device_index_find(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.tc_device, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds %struct.tc_device, %struct.tc_device* %5, i32 0, i32 0
  store i8* %6, i8** %7, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  br label %16

12:                                               ; preds = %2
  %13 = getelementptr inbounds %struct.tc_device, %struct.tc_device* %5, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  %15 = call i64 @simple_hash(i8* %14)
  br label %16

16:                                               ; preds = %12, %10
  %17 = phi i64 [ %11, %10 ], [ %15, %12 ]
  %18 = getelementptr inbounds %struct.tc_device, %struct.tc_device* %5, i32 0, i32 1
  store i64 %17, i64* %18, align 8
  %19 = bitcast %struct.tc_device* %5 to i32*
  %20 = call i64 @avl_search(i32* @tc_device_root_index, i32* %19)
  %21 = inttoptr i64 %20 to %struct.tc_device*
  ret %struct.tc_device* %21
}

declare dso_local i64 @simple_hash(i8*) #1

declare dso_local i64 @avl_search(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
